# microservice-toolbox

./: .gitignore  AI-Init.md  AI-Project-DNA.md  AI-Session-State.md  ARCHITECTURE.md  Makefile  README.md  TESTING.md  TODO.md  go.mod  go.sum  todo
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  release.yml
_archive/: ARCHITECTURE.md  TESTING.md
cpp/: ARCHITECTURE.md  Makefile  README.md  TESTING.md  parity_test  test.yaml  test_config  test_config_final  test_config_new.yaml  test_config_toolbox_v1.9.9  toolbox_test.yaml
go/: ARCHITECTURE.md  README.md  go.mod  go.sum  main.go
integration/: README.md  expansion_check.cpp  expansion_check.go  expansion_check.py  expansion_check.rs  expansion_test.yaml  go.mod  matrix_con.go  matrix_con.py  matrix_gen.go  matrix_gen.py  run_expansion_test.sh  run_tests.sh  rust_con.rs  rust_gen.rs
python/: ARCHITECTURE.md  README.md  TESTING.md  pyproject.toml  test_logger.py
python/microservice_toolbox/: __init__.py
python/microservice_toolbox/business/: __init__.py  helpers.py  models.py
python/microservice_toolbox/config/: __init__.py  args.py  lib_loader.py  loader.py  merger.py
python/microservice_toolbox/conn_manager/: __init__.py  connection.py  errors.py  manager.py
python/microservice_toolbox/connectivity/: __init__.py  resolver.py
python/microservice_toolbox/lifecycle/: __init__.py  manager.py
python/microservice_toolbox/network/: grpc_server.py
python/microservice_toolbox/serializers/: __init__.py  providers.py  serializer.py
python/microservice_toolbox/utils/: __init__.py  helpers.py  logger.py  terminal_ui.py
python/tests/: test_business_models.py  test_config.py  test_conn_manager.py  test_connectivity.py  test_serializers.py
quick-overview/: Architecture-Overview.md  Features-Behavior.md  General-Misc.md  Testing-Playbook.md
rust/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md  standalone.yaml
rust/examples/: test_logger.rs
rust/src/: lib.rs
rust/src/business/: models.rs
rust/src/config/: args.rs  ffi.rs  loader.rs  merger.rs  mod.rs
rust/src/conn_manager/: connection.rs  errors.rs  manager.rs  mod.rs
rust/src/connectivity/: mod.rs  resolver.rs
rust/src/lifecycle/: manager.rs  mod.rs
rust/src/network/: grpc_server.rs
rust/src/serializers/: mod.rs  providers.rs  serializer.rs
rust/src/utils/: helpers.rs  logger.rs  mod.rs  terminal_ui.rs
rust/tests/: test_business_models.rs  test_lifecycle.rs
vba/: ARCHITECTURE.md  AppConfig.cls  DistConf.bas  README.md  TESTING.md  Toolbox.bas
(+45 files in other folders)
