[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
