[package]
name = "microservice-toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.51.1", features = ["full"] }
tonic = "0.14.5"
prost = "0.14.3"
tonic-reflection = "0.14.5"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.134"
bincode = "1.3.3"
rand = "0.8"
unilog-rs = { git = "https://github.com/Bastien-Antigravity/universal-logger", branch = "main" }
rmp-serde = "1.3.1"
