[package]
name = "microservice-toolbox"
version = "1.1.5"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.51.1", features = ["full"] }
tonic = "0.14.5"
prost = "0.14.3"
tonic-reflection = "0.14.5"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.134"
bincode = "3.0.0"
rand = "0.8"
rmp-serde = "1.3.1"
unilog-rs = { git = "https://github.com/Bastien-Antigravity/universal-logger", branch = "main", optional = true }
libloading = "0.8"

[features]
default = []
unilog = ["dep:unilog-rs"]

[[bin]]
name = "integration_gen"
path = "../integration/rust_gen.rs"

[[bin]]
name = "integration_con"
path = "../integration/rust_con.rs"

[[example]]
name = "test_logger"
required-features = ["unilog"]
